--- a/packages/query-builder-core/package.json
+++ b/packages/query-builder-core/package.json
@@ -5,7 +5,6 @@
   "main": "lib",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon",
     "build": "tsc"
   },
   "keywords": [
@@ -31,6 +30,7 @@
     "@types/pg": "^8.6.3",
     "express": "^4.17.2",
     "generic-query-builder": "^1.0.1",
+    "generic-query-builder-common": "^1.0.1",
     "pg": "^8.7.1",
     "typescript": "^4.5.4"
   },
