updated core packages

--- a/example/client/package.json
+++ b/example/client/package.json
@@ -10,7 +10,8 @@
   "author": "Uğur Erdal",
   "license": "ISC",
   "dependencies": {
-    "generic-query-builder-client": "^1.0.2"
+    "generic-query-builder-client": "^1.0.2",
+    "generic-query-builder-common": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
